kubernetes/manifests/plex/_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: plex
    name: plex
  name: plex
