kubernetes/manifests/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  ports:
  - protocol: TCP
    port: 80
    targetPort: 32400
    name: "http"
  type: ClusterIP
