kubernetes/manifests/plex/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  namespace: plex
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: victoria-metrics
    - matchLabels:
        io.kubernetes.pod.namespace: authentik
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
  egress:
  # Plex metadata and authentication services
  - toFQDNs:
    - matchPattern: "*.plex.tv"
    - matchName: "plex.tv"
    - matchName: "plexapp.com"
    - matchName: "metadata.provider.plex.tv"
    - matchPattern: "*.plex.tv"
    - matchPattern: "*.plexapp.com"
    # Movie/TV metadata providers
    - matchName: "api.tmdb.org"
    - matchPattern: "*.tmdb.org"
    - matchPattern: "*.themoviedb.org"
    - matchName: "themoviedb.org"
    - matchPattern: "*.thetvdb.com"
    - matchName: "thetvdb.com"
    - matchPattern: "*.tvmaze.com"
    - matchName: "tvmaze.com"
    - matchPattern: "*.imdb.com"
    - matchName: "imdb.com"
    # Music metadata providers
    - matchPattern: "*.musicbrainz.org"
    - matchName: "musicbrainz.org"
    - matchPattern: "*.last.fm"
    - matchName: "last.fm"
    # Subtitle providers
    - matchPattern: "*.opensubtitles.com"
    - matchName: "opensubtitles.com"
    # General internet access for plugins and updates
    - matchPattern: "*.github.com"
    - matchName: "github.com"
    - matchName: "raw.githubusercontent.com"
    # Nullservers
    - matchPattern: "*.*.nullservers.com"
    - matchPattern: "*.nullservers.com"
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  # DNS resolution
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
